# libtrancevibe

./: .gitmodules  CMakeLists.txt  ChangeLog  LICENSE.txt  README.txt  documentation.html  index.markdown  index.textile
_includes/: about.html
blog/_posts/: 2009-05-31-new-project-website.textile
doc/: Doxyfile
examples/: CMakeLists.txt
examples/trancevibe_qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  trancevibe_qt.pro
examples/tvtest/: CMakeLists.txt  tvtest.c
include/: trancevibe.h
installers/libtrancevibe.pmdoc/: 01libtrancevibe-contents.xml  01libtrancevibe.xml  02trancevibe-contents.xml  02trancevibe.xml  index.xml
libtrancevibe.xcodeproj/: project.pbxproj
libtrancevibe_vs2003/: libtrancevibe.sln  libtrancevibe.vcproj
libtrancevibe_vs2003/tvtest/: tvtest.vcproj
src/: CMakeLists.txt  trancevibe.c  trancevibe.h  trancevibe_libusb1.c
