PROJECT(LIBTRANCEVIBE)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
IF(WIN32)
  SET(LIBTVNAME "libtrancevibe")
  SET(LIBUSBNAME "libusb")
ELSE(WIN32)
  SET(LIBUSBNAME "usb")
  SET(LIBTVNAME "trancevibe")
  INCLUDE_DIRECTORIES (/usr/include /usr/local/include)
  LINK_DIRECTORIES(/usr/lib /usr/local/lib)
  IF (APPLE)
    SET(OTHER_LDFLAGS " -framework Carbon -framework IOKit")
  ENDIF (APPLE)
ENDIF(WIN32)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples/tvtest)
