SET(SRCS trancevibe.c)
ADD_LIBRARY (trancevibe STATIC ${SRCS})
ADD_LIBRARY (trancevibe_dynamic SHARED ${SRCS})
SET_TARGET_PROPERTIES (trancevibe PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (trancevibe_dynamic PROPERTIES OUTPUT_NAME "trancevibe")
SET_TARGET_PROPERTIES (trancevibe_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
TARGET_LINK_LIBRARIES(trancevibe ${LIBUSBNAME})
TARGET_LINK_LIBRARIES(trancevibe_dynamic ${LIBUSBNAME})


